refactor: Json file changed location

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
       <div class="input-group my-5 w-50 mx-auto">
-        <input id="input-field" type="text" class="form-control" placeholder="product search here..." aria-label="product search" aria-describedby="basic-addon2">
+        <input id="input-field" type="text" class="form-control" placeholder="Search products" aria-label="product search" aria-describedby="basic-addon2">
         <button class="btn btn-secondary" id="search-btn" onclick="loadProducts()">Search</button>
       </div>
 
