--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
 
-<body
+<body>
 
-  <main class="main">
+
+  
+  <main>
     
 
 
@@ -34,10 +36,10 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-9 col-lg-9 col-sm-7 col-12">
+        <div class="col-lg-9 col-md-8 col-sm-6 col-12">
           <div id="all-products"></div>
         </div>
-        <div class="col-md-3 col-lg-3 col-sm-5 col-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="cart" id="my-cart">
             <table class="table">
               <thead>
