--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- title tag -->
-  <title>Easy Store</title>
+  <title>Fashion Store</title>
 
   <!-- external css link -->
   <link rel="stylesheet" href="./css/style.css" />
