feat: Added background color in card for better looking

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body class="body">
 
 
   <!-- main section start -->
@@ -40,7 +40,6 @@
 
 
     <!-- product item part -->
-    <div class="container">
       <div class="row">
 
         <!-- product item -->
@@ -112,7 +111,6 @@
           </div>
         </div>
       </div>
-    </div>
     <!-- product item part end -->
 
   </main>
